[metadata]
name = arecibo
summary = A service for discovering what hardware is connected to a network, and providing a way to register it into other systems which want to manage it.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
  arecibod = arecibo.daemon.daemon:main

[files]
packages =
    arecibo

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = arecibo/locale
domain = arecibo

[update_catalog]
domain = arecibo
output_dir = arecibo/locale
input_file = arecibo/locale/arecibo.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = arecibo/locale/arecibo.pot
